--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -139,4 +139,7 @@
   <data name="cirkel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cirkel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="rondje" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rondje.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
